Patch files to remove preview flags
Signed-off-by: Gulshan <kumargu@amazon.com>